--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "Muse Ant Design Dashboard",
-  "name": "Muse Ant Design Dashboard",
+  "short_name": "Vnpt Tool Bras Gpon",
+  "name": "Vnpt Tool Bras Gpon",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/png"
     },
     {
-      "src": "favicon.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
