--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-terminal-ui": "^1.3.0",
     "styled-components": "^5.3.0",
+    "universal-cookie": "^7.1.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
