--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.20.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
