--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Vnpt Tool Bras Gpon",
-  "name": "Vnpt Tool Bras Gpon",
+  "short_name": "VNPT Tool Bras Gpon",
+  "name": "VNPT Tool Bras Gpon",
   "icons": [
     {
       "src": "logo.png",
