--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-terminal-ui": "^1.3.0",
     "styled-components": "^5.3.0",
     "universal-cookie": "^7.1.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
