--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.27.1",
     "axios": "^1.7.2",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
