--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
-# REACT_APP_API = https://10.91.14.12/api
-REACT_APP_API = http://localhost:8000/api
+REACT_APP_API = https://10.91.14.12/api
+#REACT_APP_API = http://localhost:8000/api
 
 PORT=3000
